Language, standard libary, and compiler changes (for shader writers):
* The "gabor" varieties of noise were found to have a serious mathematical
  bug, which after fixing results in a change to the pattern. We are hoping
  that they were rarely used, but beware a change in appearance. (1.6.1)

API changes, new options, new ShadingSystem features (for renderer writers):
* New per-ShaderGroup attributes:
   * You can retrieve information about all closures that an optimized group
     might create using new queries "num_closures_needed", "closures_needed",
     "unknown_closures_needed". This could be useful for renderers by, for
     example, noticing that a material can't possibly call the "transparent"
     closure, and thus concluding that it must be opaque everywhere and thus
     shadow rays need not execute shaders to determine opacity. (#400) (1.6.0)
   * You can retrieve information about all "globals" (P, N, etc.) that an
     optimized group needs using new queries "num_globals_needed" and
     "globals_needed". This could be useful for renderers for which
     computing those globals is very expensive; examining which are truly
     needed and only computing those. (#401) (1.6.0)

Performance improvements:
* Many noise() varieties have been sped up significantly on
  architectures with SIMD vector instructions (such as SSE). We're
  seeing 2x-3x improvement for noise(point), depending on the specific
  variety.  Higher speedups when returning vectors rather than scalars;
  higher speedups when supplying derivatives as well. #415 (1.6.1)
* Change many transcendental functions (sin, cos, exp, etc) to use
  approximations that are must faster than the 100% correct versions in
  libm. The new ones may differ from the old in the last decimal place,
  which is probably undesirable if programming ICBM guidance systems,
  but seems fine for rendering when the result is many times faster to
  evaluate those functions. You can turn it back to the fully precise and